--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
 
     // Navigation
+    implementation("androidx.navigation:navigation-runtime-ktx:$nav_version")
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
     // safeArgs
@@ -93,5 +94,8 @@ dependencies {
 
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+
 
 }
