--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,10 @@ dependencies {
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //swipe Refresh RecyclerView
+
+  //  implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
 
 
 
